style.css
/**
 * Copyright (C) 2020 Markus Peloso
 *
 * This file is part of OSM Apps Catalog.
 *
 * OSM Apps Catalog is free software: you can redistribute it and/or modify
 * it under the terms of the GNU Affero General Public License as
 * published by the Free Software Foundation, either version 3 of the
 * License, or (at your option) any later version.
 *
 * OSM Apps Catalog is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU Affero General Public License for more details.
 *
 * You should have received a copy of the GNU Affero General Public License
 * along with OSM Apps Catalog.  If not, see <http://www.gnu.org/licenses/>.
 */

html {
  background: white;
}

body {
  padding: 0;
  margin: 0;
  font-family: Lato, "Helvetica Neue", Arial, Helvetica, sans-serif;
  text-align: center;
  color: #333;
}

a {
  text-decoration: none;
  color: #007aff;
}

.radio-btn input {
  display: none;
}

.radio-btn span {
  display: inline-block;
  color: #666;
  flex-direction: row;
  width: 120px;
  border: 1px solid #666;
  background-color: #fff;
  box-sizing: border-box;
  font-size: 16px;
  padding: 4px 6px;
}

.radio-btn:first-child span {
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
}
.radio-btn:last-child span {
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
  border-left: none;
}
.radio-btn:first-child input:not(:checked) + span {
  border-right: none;
}

.radio-btn input:checked + span {
  color: #007aff;
  border: 1px solid #007aff;
}

.align-middle {
  vertical-align: middle !important;
}

.text-center {
  text-align: center !important;
}

.table {
  display: table;
}
.cell {
  display: table-cell;
  vertical-align: top;
  text-align: start;
}
.row {
  display: table-row;
  scroll-snap-align: start;
}

.page-header {
  left: 0;
  position: sticky;
  z-index: 1000;
}

.warning {
  color: #ffc680;
}

#content {
  scroll-snap-align: start;
  scroll-snap-type: y proximity;
  scroll-padding-top: 10px;
  overflow-x: auto;
  overflow-y: visible;
  height: 100vh;
}

#compare {
  width: max-content;
}

.row.fixed {
  position: sticky;
  top: 0;
  background-color: white;
  z-index: 2;
}

#compare .cell {
  min-width: 160px;
  padding: 8px;
  border-right: 1px solid #dcdee2;
  max-width: 270px;
  width: 33vw;
  box-sizing: border-box;
}

#compare .cell:last-child {
  border-right: none;
}

#compare .cell.header {
  min-width: auto;
  max-width: 135px;
  width: 15vw;
  position: relative;
  scroll-snap-align: start;
}

#compare .header a {
  text-decoration: none;
  color: #333;
}

#compare .header .export {
  text-decoration: none;
  color: #007aff;
}

#compare .params-group {
  clear: both;
  padding-top: 12px;
}

#compare .params-title {
  font-weight: bold;
  position: sticky !important;
  left: 0;
  max-width: none !important;
  width: auto !important;
}

#compare .param-title {
  color: gray;
  font-size: small;
  position: sticky !important;
  left: 0;
  background: white;
  z-index: 1;
}
#compare a .param-title {
  text-decoration: none;
  color: #007aff;
}
#compare .param-text {
  font-size: small;
}

#compare .params-group-title {
  text-wrap: nowrap;
}

.info {
  color: black;
  font-size: 26px;
  padding: 4px;
}

#search {
  position: relative;
  color: #666;
  display: inline-block;
  flex-direction: row;
  min-height: 30px;
  width: 240px;
  max-width: 100%;
  border: 1px solid #dcdee2;
  border-radius: 4px;
  background-color: #fff;
  outline: 0;
  box-sizing: border-box;
  transition: background-color 0.2s;
  font-size: 16px;
  padding: 4px 6px;
}
.ss-main {
  width: 240px;
  max-width: 100%;
}

#search,
.ss-main {
  margin: 3px 0;
}

.ss-main .ss-multi-selected .ss-values .ss-disabled {
  color: #666;
}

.app {
  scroll-snap-align: start;
  width: 320px;
  max-width: calc(100% - 40px);
  padding: 0 10px 10px;
  margin: 10px;
  vertical-align: top;
  text-align: left;
  display: inline-block;
  border: 1px solid rgba(34, 36, 38, 0.1);
  -webkit-box-shadow: 0 0 0 1px #d4d4d5, 0 2px 4px 0 rgba(34, 36, 38, 0.12),
    0 2px 10px 0 rgba(34, 36, 38, 0.15);
  box-shadow: 0 0 0 1px #d4d4d5, 0 2px 4px 0 rgba(34, 36, 38, 0.12),
    0 2px 10px 0 rgba(34, 36, 38, 0.15);
  border-radius: 0.28571429rem;
  overflow: hidden;
  position: relative;
}

.app .header {
  text-align: center;
}
.app .header a {
  text-decoration: none;
  color: #333;
  max-width: 250px;
}

.app .img,
#compare .img {
  max-width: 100%;
  max-height: 250px;
  margin: 6px 0;
}

.badges {
  font-size: small;
  padding-top: 4px;
  display: block;
}

.with-corner-badge {
  padding-top: 22px !important;
}

.corner-badge {
  position: absolute;
  right: 0;
  top: 0;
  background: rgb(153, 255, 153);
  border-bottom-left-radius: 5px;
  padding: 2px 4px;
}

.app .more-infos {
  clear: both;
  padding-top: 12px;
}

.app .more-infos-button {
  background: none;
  border: none;
  display: block;
  clear: both;
  text-align: center;
  width: 100%;
  padding-top: 8px;

  color: gray;
}

.app .more-infos-title {
  font-weight: bold;
}

.app .more-info {
  border-bottom: 1px solid lightgray;
  padding: 10px 2px;
  font-size: small;
  display: block;
}

.app .more-info::after {
  display: block;
  content: "";
  clear: both;
}

.app .more-infos .more-info:last-child {
  border-bottom: none;
  padding: 10px 2px 0 2px;
}

.app .more-info-title {
  color: gray;
}
.app a .more-info-title {
  text-decoration: none;
  color: #007aff;
}
.app .more-info-text {
  float: right;
}

.download {
  font-size: 22px;
  padding: 4px 3px;
  display: inline-block;
  color: forestgreen;
}

.unknown {
  color: lightgray;
}

.no-results {
  color: lightgray;
  font-size: 2em;
  text-align: center;
  width: 100vw;
}

.hidden {
  display: none !important;
}

.badge {
  float: left;
  margin-bottom: 4px;
  padding: 2px 4px;
  border-radius: 4px;
  margin-right: 4px;
  white-space: nowrap;
}

.dynamic-more {
  position: relative;
  height: 76px;
  overflow: hidden;
}

.more {
  position: relative;
  height: 76px;
  transition-property: height;
  transition-duration: 1s;
  overflow: hidden;
}

.more .fade-out {
  position: absolute;
  bottom: 0;
  height: 100%;
  width: 100%;
  background: linear-gradient(
    rgba(255, 255, 255, 0) 50%,
    rgba(255, 255, 255, 1)
  );
  cursor: pointer;
}

.more .text {
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  text-align: center;
}

.language-url {
  vertical-align: middle;
}

.language-url i {
  padding: 3px 0;
}

@media (prefers-color-scheme: dark) {
  html {
    filter: invert(100%) hue-rotate(180deg);
  }

  html img,
  html input[type="image"] {
    filter: invert(100%) hue-rotate(-180deg);
  }
}

